Fix: the series-controls cards were overflowing the container, fix is partial, i want to be able to have the height responsive to the parent height

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1071,12 +1071,65 @@ body {
   height: 120px;
 }
 
+.h-\[320px\] {
+  height: 320px;
+}
+
+.h-72 {
+  height: 18rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-\[262px\] {
+  height: 262px;
+}
+
+.h-\[330px\] {
+  height: 330px;
+}
+
+.h-\[312px\] {
+  height: 312px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-\[278px\] {
+  height: 278px;
+}
+
+.h-\[178px\] {
+  height: 178px;
+}
+
 .max-h-\[300px\] {
   max-height: 300px;
 }
 
 .max-h-\[420px\] {
   max-height: 420px;
+}
+
+.max-h-\[302px\] {
+  max-height: 302px;
+}
+
+.min-h-0 {
+  min-height: 0px;
 }
 
 .w-10 {
@@ -1477,6 +1530,14 @@ body {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .text-center {
